# mip_grid

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
.github/workflows/: docs.yml
cmake/: Config.cmake
cpp/: CMakeLists.txt
cpp/include/: DotGraphExporter.h  Edge.h  Grid.h  GridAttributes.h  GridBuilder.h  GridDatasetExporter.h  GridExport.h  GridGenerator.h  GridInjector.h  GridSpec.h  GridValidator.h  InjectedGrid.h  JsonConfigLoader.h  Logger.h  Node.h  PowerGridSnapshot.h  PowerGridSnapshotHDF5Writer.h  TimeSeries.h  TimeSeriesAttributes.h  TimeSeriesConstructor.h  Types.h  YamlConfigLoader.h
cpp/src/: DotGraphExporter.cpp  Grid.cpp  GridBuilder.cpp  GridDatasetExporter.cpp  GridExport.cpp  GridGenerator.cpp  GridInjector.cpp  GridValidator.cpp  JsonConfigLoader.cpp  PowerGridSnapshot.cpp  PowerGridSnapshotHDF5Writer.cpp  TimeSeries.cpp  TimeSeriesConstructor.cpp  YamlConfigLoader.cpp  main.cpp
docs/: Doxyfile
docs/sphinx/: api.rst  conf.py  index.rst
examples/: CMakeLists.txt  example_json_input.json  grid_csv_export_static.cpp  visualize_grid.cpp
python/: constraints.py  model.py  network_model.py  run_optimization.py  snapshot_loader.py  solver.py  test.py
scripts/: build_cpp.sh  env.sh  env.sh.localexample  mpi_test_helper.sh
tests/: CMakeLists.txt
tests/include/: test_utils.h
tests/mpi/: test_mpi_startup.cpp
tests/python/: test_mpi.py
tests/unit/: test_edge_connectivity.cpp  test_edge_creation.cpp  test_grid_dataset_export_roundtrip.cpp  test_grid_dataset_exporter.cpp  test_grid_feasibility.cpp  test_grid_injected.cpp  test_json_config_loader.cpp  test_node_creation.cpp  test_power_grid_snapshot_construction.cpp  test_snapshot_hdf5_writer.cpp  test_time_series_determinism.cpp  test_time_series_node_alignment.cpp  test_time_series_shape.cpp  test_utils.cpp  test_yaml_config_loader.cpp
